@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T01:14:14Z",
+  "timestamp" : "2022-05-12T01:41:19Z",
   "count_outdated" : 146,
   "uniques_outdated" : 99,
-  "count" : 235,
-  "uniques" : 143,
+  "count" : 254,
+  "uniques" : 149,
   "clones" : [
     {
       "timestamp": "2022-04-30T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 0, 9 ],
       "uniques": 5,
       "uniques_minmax": [ 0, 5 ]
+    },
+    {
+      "timestamp": "2022-05-11T00:00:00Z",
+      "count": 19,
+      "count_minmax": [ 19, 19 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 6 ]
     }
   ]
 }
